--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,10 +1,3 @@
-$primary:   #4077AA;
-$secondary: #2D2D2D;
-$light:     #333333;
-$dark:      #F0F0F0;
-$success:   #4CAF50;
-$danger:    #FF6F61;
-
 $theme-colors: (
   primary:   $primary,
   secondary: $secondary,
@@ -14,7 +7,7 @@ $theme-colors: (
   danger:    $danger
 );
 
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 
 #root {
