got it under control

--- a/frontend/src/styles/themes/dark.scss
+++ b/frontend/src/styles/themes/dark.scss
@@ -1,6 +1,6 @@
-$primary:   #4077AA;
+$primary:   #205588;
 $secondary: #2D2D2D;
 $light:     #333333;
 $dark:      #F0F0F0;
-$success:   #4CAF50;
-$danger:    #FF6F61;
+$success:   #2A8D30;
+$danger:    #DD4D40;
